# Hotel

HotelApp/: CMakeLists.txt  Dato.cpp  Dato.h  Hotel.cpp  Hotel.h  Kunde.cpp  Kunde.h  Person.cpp  Person.h  Reservation.cpp  Reservation.h  Vaerelse.cpp  Vaerelse.h  Ydelser.cpp  Ydelser.h  main.cpp
